fix spacing

--- a/src/assets/bookingPage.css
+++ b/src/assets/bookingPage.css
@@ -42,7 +42,6 @@
   z-index: 1;
 }
 
-
 .booking-form {
   background-color: #f2e6e2;
   background-size: 100% 600px;
@@ -244,11 +243,10 @@ textarea:focus {
   transition: box-shadow 0.3s ease;
 }
 
-
-@media screen and (min-height: 1250px) {
-    .booking-form {
-      height: 100vh;
-    }
+@media screen and (min-height: 1500px) {
+  .booking-form {
+    height: 100vh;
+  }
 }
 
 @media screen and (max-width: 1025px) {
